Completing Section 11.161: Interface Challenge Part 1
Adjustments and other stuff I have adapted from Tim's implementation